fixed homepage, login screen

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="/manifest.json" />
     <title>Create TanStack App - expense-tracker-app</title>
   </head>
-  <body>
+  <body class="pb-20">
     <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
